Add git-submodule pyramid_hawkauth and tracking branch 'six'
Signed-off-by: Markus Heiser <markus.heiser@darmarit.de>

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,7 @@
 	path = m2crypto
 	url = https://github.com/return42/m2crypto
 	branch = six
+[submodule "pyramid_hawkauth"]
+	path = pyramid_hawkauth
+	url = https://github.com/return42/pyramid_hawkauth
+	branch = six
