README: updated status of submodule pyramid_hawkauth
pyramid_hawkauth has been merged upstream

- https://github.com/mozilla-services/pyramid_hawkauth/commit/d83291d>

Signed-off-by: Markus Heiser <markus.heiser@darmarit.de>

--- a/.gitmodules
+++ b/.gitmodules
@@ -36,5 +36,4 @@
 	branch = six
 [submodule "pyramid_hawkauth"]
 	path = pyramid_hawkauth
-	url = https://github.com/return42/pyramid_hawkauth
-	branch = six
+	url = https://github.com/mozilla-services/pyramid_hawkauth.git
